# docs/swagger.yaml
@@ -21,10 +21,6 @@ definitions:
       metaData:
         additionalProperties: true
         type: object
-      parent:
-        $ref: '#/definitions/database.Partner'
-      parentId:
-        type: string
       referralCode:
         type: string
       socialMedia:
@@ -207,33 +203,6 @@ definitions:
     - ReferralStatusActive
     - ReferralStatusInactive
     - ReferralStatusUnlinked
-  database.SubAffiliateInvite:
-    properties:
-      acceptedAt:
-        type: string
-      createdAt:
-        type: string
-      email:
-        type: string
-      expiresAt:
-        type: string
-      id:
-        type: string
-      inviteCode:
-        type: string
-      overrideRate:
-        type: number
-      partner:
-        $ref: '#/definitions/database.Partner'
-      partnerId:
-        type: string
-      status:
-        type: string
-      subPartnerId:
-        type: string
-      updatedAt:
-        type: string
-    type: object
   database.User:
     properties:
       binanceEmail:
@@ -545,51 +514,6 @@ definitions:
         type: string
       start_day:
         type: string
-    type: object
-  structs.SubAffiliateInviteParams:
-    properties:
-      email:
-        type: string
-      overrideRate:
-        type: number
-    required:
-    - email
-    type: object
-  structs.SubAffiliateListParams:
-    properties:
-      current:
-        type: integer
-      export:
-        type: boolean
-      limit:
-        description: alias for PageSize
-        type: integer
-      page:
-        description: alias for Current
-        type: integer
-      pageSize:
-        type: integer
-      sortDate:
-        $ref: '#/definitions/structs.SortDate'
-      status:
-        type: string
-    type: object
-  structs.SubAffiliateStatsParams:
-    properties:
-      current:
-        type: integer
-      export:
-        type: boolean
-      limit:
-        description: alias for PageSize
-        type: integer
-      page:
-        description: alias for Current
-        type: integer
-      pageSize:
-        type: integer
-      sortDate:
-        $ref: '#/definitions/structs.SortDate'
     type: object
   structs.SuccessResponse:
     properties:
@@ -2478,164 +2402,6 @@ paths:
       summary: Referral aggregate stats
       tags:
       - Partner Referrals
-  /partner/sub-affiliates/invite:
-    post:
-      consumes:
-      - application/json
-      description: Creates a new sub-affiliate invite under the authenticated partner
-      parameters:
-      - description: Invite payload
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/structs.SubAffiliateInviteParams'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/structs.ResponseBody'
-            - properties:
-                body:
-                  $ref: '#/definitions/database.SubAffiliateInvite'
-              type: object
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/structs.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/structs.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/structs.ErrorResponse'
-      security:
-      - BearerAuth: []
-      summary: Invite a sub-affiliate
-      tags:
-      - Partner Sub-Affiliates
-  /partner/sub-affiliates/invite/{code}:
-    get:
-      consumes:
-      - application/json
-      description: Returns the sub-affiliate invite identified by code
-      parameters:
-      - description: Invite code
-        in: path
-        name: code
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/structs.ResponseBody'
-            - properties:
-                body:
-                  $ref: '#/definitions/database.SubAffiliateInvite'
-              type: object
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/structs.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/structs.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/structs.ErrorResponse'
-      security:
-      - BearerAuth: []
-      summary: Get sub-affiliate invite detail
-      tags:
-      - Partner Sub-Affiliates
-  /partner/sub-affiliates/list:
-    post:
-      consumes:
-      - application/json
-      description: Returns a paginated list of sub-affiliates under the partner
-      parameters:
-      - description: Filters and pagination
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/structs.SubAffiliateListParams'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/structs.ResponseBody'
-            - properties:
-                body:
-                  $ref: '#/definitions/structs.PaginationResponse'
-              type: object
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/structs.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/structs.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/structs.ErrorResponse'
-      security:
-      - BearerAuth: []
-      summary: List sub-affiliates
-      tags:
-      - Partner Sub-Affiliates
-  /partner/sub-affiliates/stats:
-    post:
-      consumes:
-      - application/json
-      description: Returns aggregate statistics for the partner's sub-affiliate network
-      parameters:
-      - description: Stats filters
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/structs.SubAffiliateStatsParams'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/structs.ResponseBody'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/structs.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/structs.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/structs.ErrorResponse'
-      security:
-      - BearerAuth: []
-      summary: Sub-affiliate stats
-      tags:
-      - Partner Sub-Affiliates
   /public/partner/ref/{code}:
     get:
       consumes:
